Thorben receives Linde/MDSI Fellowship
May 15, 2023
Thorben has received the <a href = "https://www.mdsi.tum.de/en/mdsi/research/funding-support/doctoral-fellowships/" target = "_blank">Linde/MDSI Fellowship</a> for his work applying data mining and machine learning to battery material discovery and optimization. The fellowship will support Thorben's research and promote interdisciplinary research within TUM. Congratulations Thorben!

Team's work featured for International Women’s Day by the RSC
March 16, 2023
The work of the team and Jennifer has been featured by the Royal Society of Chemistry for International Women's day. Relevant tweets can be found <a href="https://twitter.com/JMaterChem/status/1633471104005054472" target="_blank">here</a> and <a href="https://twitter.com/RSC_Energy/status/1633478710614450178" target="_blank">here</a> highlighting a recent open access publication.

Prof. Rupp accepts position on the advisory board of Advanced Energy Materials
June 30, 2022
Prof. Rupp has accepted a position on the <a href="https://onlinelibrary.wiley.com/page/journal/16146840/homepage/2528_edbd.html" target="_blank">advisory board</a> of Advanced Energy Materials. This reflects Jennifer's and the team's important contributions to the journal and the field at large. Congratulations Jennifer!

Philipp reaches top 10 in dissertation competition
June 23, 2022
Philipp has made it in the Top 10 and finals for Dissertations in Germany for the Natural Science/Tech Division. He will defend his work on glucose micro fuel cells in Berlin in the coming week. Congratulations Philipp, and best of luck!

Thomas awarded MIT Energy Initiative Fellowship
June 23, 2022
Thomas has been named a 2022-2023 MIT Energy Fellow, in recognition of his ground-breaking work on opto-ionics. Congratulations Thomas!

Drew awarded Accenture Fellowship
June 23, 2022