@@ -168,6 +168,7 @@
 
 
 
+
 <!-- START NEWS BAR -->
 <div class="container-fluid p-0 news-bar text-white">
     <div class="row p-0 m-0">
@@ -175,19 +176,19 @@
             <div class="ecm-primary font-weight-bold text-center align-middle"> NEWS </div>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Thorben receives Linde/MDSI Fellowship </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Thomas wins DMSE's best PhD thesis award </a>
+            <br>
+            <small class="ecm-primary font-italic"> May 24, 2023 </small>
+        </div>
+        <div class="col-sm p-1 bg-dark">
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Thorben receives Linde/MDSI Fellowship </a>
             <br>
             <small class="ecm-primary font-italic"> May 15, 2023 </small>
         </div>
-        <div class="col-sm p-1 bg-dark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Team's work featured for International Women’s Day by the RSC </a>
+        <div class="col-sm p-1 bg-lessdark">
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Team's work featured for International Women’s Day by the RSC </a>
             <br>
             <small class="ecm-primary font-italic"> March 16, 2023 </small>
-        </div>
-        <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Prof. Rupp accepts position on the advisory board of Advanced Energy Materials </a>
-            <br>
-            <small class="ecm-primary font-italic"> June 30, 2022 </small>
         </div>
     </div>
 </div>
