@@ -101,6 +101,14 @@
 
 <tr><td>
     <a class="anchor" id="news1"></a>
+    <h6 class="mb-1">Thomas wins DMSE's best PhD thesis award </h6> 
+    <div class='font-weight-light'>May 24, 2023</div>
+    <p><small>Thomas is this year’s recipient of the best PhD thesis award at the Department of Material Science and Engineering at MIT. Thomas's PhD thesis investigates opto-ionic properties of doped ceria and includes the first observations of opto-ionic space charge modulation at grain boundary regions in a ceramic.  Congratulations Thomas!</small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news2"></a>
     <h6 class="mb-1">Thorben receives Linde/MDSI Fellowship </h6> 
     <div class='font-weight-light'>May 15, 2023</div>
     <p><small>Thorben has received the <a href = "https://www.mdsi.tum.de/en/mdsi/research/funding-support/doctoral-fellowships/" target = "_blank">Linde/MDSI Fellowship</a> for his work applying data mining and machine learning to battery material discovery and optimization. The fellowship will support Thorben's research and promote interdisciplinary research within TUM. Congratulations Thorben!</small></p>
@@ -108,7 +116,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    <a class="anchor" id="news3"></a>
     <h6 class="mb-1">Team's work featured for International Women’s Day by the RSC </h6> 
     <div class='font-weight-light'>March 16, 2023</div>
     <p><small>The work of the team and Jennifer has been featured by the Royal Society of Chemistry for International Women's day. Relevant tweets can be found <a href="https://twitter.com/JMaterChem/status/1633471104005054472" target="_blank">here</a> and <a href="https://twitter.com/RSC_Energy/status/1633478710614450178" target="_blank">here</a> highlighting a recent open access publication.</small></p>
@@ -116,7 +124,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Prof. Rupp accepts position on the advisory board of Advanced Energy Materials </h6> 
     <div class='font-weight-light'>June 30, 2022</div>
     <p><small>Prof. Rupp has accepted a position on the <a href="https://onlinelibrary.wiley.com/page/journal/16146840/homepage/2528_edbd.html" target="_blank">advisory board</a> of Advanced Energy Materials. This reflects Jennifer's and the team's important contributions to the journal and the field at large. Congratulations Jennifer!</small></p>
