@@ -1,3 +1,7 @@
+Thomas wins DMSE's best PhD thesis award
+May 24, 2023
+Thomas is this year’s recipient of the best PhD thesis award at the Department of Material Science and Engineering at MIT. Thomas's PhD thesis investigates opto-ionic properties of doped ceria and includes the first observations of opto-ionic space charge modulation at grain boundary regions in a ceramic.  Congratulations Thomas!
+
 Thorben receives Linde/MDSI Fellowship
 May 15, 2023
 Thorben has received the <a href = "https://www.mdsi.tum.de/en/mdsi/research/funding-support/doctoral-fellowships/" target = "_blank">Linde/MDSI Fellowship</a> for his work applying data mining and machine learning to battery material discovery and optimization. The fellowship will support Thorben's research and promote interdisciplinary research within TUM. Congratulations Thorben!
